# mandiant-flare-floss

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/: CONTRIBUTING.md  dependabot.yml
.github/mypy/: mypy.ini
.github/pyinstaller/: floss.spec
.github/pyinstaller/hooks/: hook-vivisect.py
.github/workflows/: build.yml  publish.yml  tests.yml  verify-pins.yml
doc/: installation.md  language_specific_strings.md  test.md  theory.md  usage.md
floss/: __main__.py  api_hooks.py  const.py  decoding_manager.py  function_argument_getter.py  get_go_strings.py  identification_manager.py  identify.py  language_identifier.py  logging.py  logging_.py  main.py  results.py  rust_version_database.py  stackstrings.py  string_decoder.py  strings.py  tightstrings.py  utils.py  version.py
floss/features/: extract.py  features.py
floss/language/: identify.py  utils.py
floss/language/go/: coverage.py  extract.py
floss/language/rust/: coverage.py  extract.py  rust_version_database.py
floss/plugins/: arithmetic_plugin.py  mov_plugin.py
floss/render/: default.py  json.py  logging.py  result_document.py  sanitize.py
floss/sigs/: README.md
resources/: icon.xcf
scripts/: README.md  extract_rust_hashes.py  idaplugin.py  render-binja-import-script.py  render-ghidra-import-script.py  render-ida-import-script.py  render-r2-import-script.py  render-x64dbg-database.py
tests/: conftest.py  fixtures.py  test_buf_filled_with.py  test_cli_args.py  test_language_extract_go.py  test_language_extract_rust.py  test_language_go_coverage.py  test_language_go_known_binary.py  test_language_id.py  test_language_rust_coverage.py  test_language_rust_known_binary.py  test_load.py  test_main.py  test_memdiff.py  test_render.py  test_scripts.py  test_strings.py
